--- a/src/pages/choose-investigator/choose-investigator.module.css
+++ b/src/pages/choose-investigator/choose-investigator.module.css
@@ -6,6 +6,9 @@
   font-family: var(--font-family-content);
   font-style: italic;
   font-size: var(--text-sm);
+  white-space: nowrap;
+  overflow-x: hidden;
+  text-overflow: ellipsis;
 }
 
 .signatures {
